@@ -23,6 +23,7 @@ config/gitlab.yml
 config/gitlab_ci.yml
 config/initializers/rack_attack.rb
 config/initializers/smtp_settings.rb
+config/initializers/relative_url.rb
 config/resque.yml
 config/unicorn.rb
 config/secrets.yml
