@@ -4,4 +4,7 @@
 
 require File.expand_path('../config/application', __FILE__)
 
+relative_url_conf = File.expand_path('../config/initializers/relative_url', __FILE__)
+require relative_url_conf if File.exist?("#{relative_url_conf}.rb")
+
 Gitlab::Application.load_tasks
